## v0.3.2 - 09 May 2021
* Emulate statvfs on Windows
* build: mark ppxlib as build-time dep, depend on OCaml >= 4.06

## v0.3.1 - 11 Apr 2021
* temporarily keep backward compatibility wrt top-level module names

## v0.3.0 - 10 Apr 2021
* build: switch to dune, dune-configurator and ppxlib
* sockopt: handle missing options at runtime
* Add IPv6 support to getifaddrs
* better Windows support
+ Support Endian module on Windows
+ Enable asctime, strftime, tzname, timezone, timegm on Windows

## v0.2.0 -  8 Nov 2019
* camlp4 dependency replaced with ppx
* use available endian functions on Mac OS

## v0.1.7 - 27 Mar 2019
* detect endian functions on more platforms
* fix openlog
* improve gettid on Mac OS

## v0.1.6 - 11 Mar 2018
* OCaml 4.05 compatibility (O_KEEPEXEC)
* sockopt: add BPF options
* make tests less fragile
* New bindings:
  * syslog

## v0.1.5 - 28 Jun 2017
* build with -safe-string

## v0.1.4 - 11 Nov 2016
+ SO_REUSEPORT
* fix sendmsg bug
* fix build on mingw

## v0.1.3 - 24 Nov 2015
* New bindings :
  * fchmodat
  * fchownat
+ ExtUnix.Config
* fix sysconf detection wrt non-standard options

## v0.1.2 - 24 Jul 2015
* New bindings :
  * sysinfo uptime
  * mtrace muntrace
  * mount umount2
  * unshare
  * chroot
+ U.Poll.is_inter inter
* TCP_KEEPCNT TCP_KEEPIDLE TCP_KEEPINTLV are now detected one by one and
  can be available or not available independently. Extunix currently doesn't
  have a mechanism to expose only selected variants from a single type in
  module [Specific], hence one should use [have_sockopt] function to check
  for options presence at runtime.

## v0.1.1 - 18 May 2014
* New bindings :
  * gettid
  * poll
* OCaml 4.02 compatibility (install all .cmi)
* sendmsg/sendfd : fix sending binary data

## v0.1.0 - 8 Oct 2013
* statvfs: add f_flags - decoded f_flag field
* New bindings :
  * sysconf
  * splice tee vmsplice
  * setsockopt_int getsockopt_int (TCP keepalive)
  * sync syncfs
  * timezone
* OCaml 4.01 compatibility (Unix.open_flag)