@@ -84,7 +84,7 @@ Build infrastructure:
   responsible for inclusion of system-specific headers - this ensures
   coherent result at configure and build steps.
 
-* Generated `extUnixConfig.ml` describes the same features for the ocaml
+* Generated `config.ml` describes the same features for the ocaml
   syntax extension [`ppx_have`][], which preprocesses
   [`src/extUnix.pp.ml`][] and generates two modules: `ExtUnix.All`
   where bindings to missing functions are rewritten to raise exception
